// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textGroupAlign renders 0 1`] = `
Array [
  .c0 {
  text-group-align: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-group-align: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-group-align: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-group-align: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textGroupAlign renders function 1`] = `
Array [
  .c0 {
  text-group-align: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-group-align: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-group-align: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-group-align: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textGroupAlign renders invalid theme path 1`] = `
Array [
  .c0 {
  text-group-align: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-group-align: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-group-align: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-group-align: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textGroupAlign renders negative number 1`] = `
Array [
  .c0 {
  text-group-align: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-group-align: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-group-align: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-group-align: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textGroupAlign renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-group-align: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-group-align: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-group-align: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-group-align: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-group-align: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-group-align: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-group-align: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-group-align: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-group-align: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-group-align: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-group-align: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-group-align: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-group-align: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-group-align: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-group-align: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-group-align: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textGroupAlign renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    text-group-align: July;
  }
}

@media April {
  .c0 {
    text-group-align: August;
  }
}

@media January {
  .c0 {
    text-group-align: September;
  }
}

@media April {
  .c0 {
    text-group-align: November;
  }
}

@media June {
  .c0 {
    text-group-align: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-group-align: July;
  }
}

@media April {
  .c0 {
    text-group-align: August;
  }
}

@media January {
  .c0 {
    text-group-align: September;
  }
}

@media April {
  .c0 {
    text-group-align: November;
  }
}

@media June {
  .c0 {
    text-group-align: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-group-align: January;
  }
}

@media April {
  .c0 {
    text-group-align: December;
  }
}

@media January {
  .c0 {
    text-group-align: April;
  }
}

@media April {
  .c0 {
    text-group-align: May;
  }
}

@media June {
  .c0 {
    text-group-align: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-group-align: January;
  }
}

@media April {
  .c0 {
    text-group-align: December;
  }
}

@media January {
  .c0 {
    text-group-align: April;
  }
}

@media April {
  .c0 {
    text-group-align: May;
  }
}

@media June {
  .c0 {
    text-group-align: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textGroupAlign renders postitive number 1`] = `
Array [
  .c0 {
  text-group-align: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-group-align: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-group-align: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-group-align: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textGroupAlign renders string 1`] = `
Array [
  .c0 {
  text-group-align: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-group-align: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-group-align: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-group-align: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textGroupAlign renders valid theme path 1`] = `
Array [
  .c0 {
  text-group-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-group-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-group-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-group-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
